[package]
name = "nitk"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
homepage = "https://itk.org/"
description = "A Rust translation of ITK (Insight Segmentation and Registration Toolkit), the C++ medical image processing library."

[dependencies]
rayon = "1.10"
png = "0.17"

[dev-dependencies]
approx = "0.5"
